# irk

./: .gitignore  Makefile  README.md  irk.cabal
app/: Main.hs
cbits/: infix.c  infix.h
etc/: Dev.hs  benchmark.json  benchmark.ps1  benchmark.sh  dev.py  emacs.sh  irk.el  notes.md  vendor.sh
src/: CLI.hs  Ignore.hs  Infix.hs  Irk.hs  LSP.hs  LSPServer.hs  Language.hs  Server.hs  Transport.hs  Types.hs  Utils.hs
src/Languages/: C.hs  Common.hs  Go.hs  Haskell.hs  JavaScript.hs  Python.hs  Ruby.hs
test/: IgnoreSpec.hs  InfixSpec.hs  IrkSpec.hs  LSPServerSpec.hs  LSPSpec.hs  LanguageSpec.hs  ServerSpec.hs  Spec.hs  Testing.hs  UtilsSpec.hs
test/data/c/: test.c
test/data/go/: main.go
test/data/haskell/: test.hs
test/data/python/: test.py
