cabal-version:      3.0
name:               irk
version:            0.1.0.0
license:            Apache-2.0
license-file:       LICENSE
author:             Federico Tedin
maintainer:         federicotedin@gmail.com
build-type:         Simple

common warnings
    ghc-options:    -Wall

common shared-deps
                    -- Haskell org:
    build-depends:    base ^>=4.18.3
                    , aeson ^>=2.2.3
                    , text ^>=2.1.3
                    , containers ^>=0.7
                    , filepath ^>=1.5.4
                    , directory ^>=1.3.9
                    , os-string ^>=2.0.8
                    , vector ^>=0.13.2
                    , bytestring ^>=0.12.2
                    , stm ^>=2.5.3
                    -- Third party:
                    , megaparsec ^>=9.7.0
                    , async ^>=2.2.5
                    , optparse-applicative ^>=0.19.0
                    , mmap ^>=0.5.9
    default-extensions:   OverloadedStrings
                        , DeriveGeneric
                        , CApiFFI
    default-language: Haskell2010

library
    import:           warnings
                    , shared-deps
    c-sources:        cbits/infix.c
    include-dirs:     cbits
    install-includes: infix.h
    cc-options:       -mavx2
    hs-source-dirs:   src
    exposed-modules:  Irk
                    , Server
                    , CLI
                    , LSP
                    , Language
                    , Languages.Common
                    , Languages.Haskell
                    , Languages.Python
                    , Languages.Go
                    , Languages.C
                    , Utils
                    , Infix
                    , Types

executable irk
    import:           warnings
                    , shared-deps
    main-is:          Main.hs
    build-depends:    irk
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    hs-source-dirs:   app

test-suite test-irk
    import:           warnings
                    , shared-deps
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    build-depends:    irk
                    , hspec ^>=2.11.14
                    , aeson-pretty ^>=0.8.10
    hs-source-dirs:   test
    other-modules:    IrkSpec
                    , ServerSpec
                    , LSPSpec
                    , LanguageSpec
                    , UtilsSpec
                    , InfixSpec
                    , Testing
